# trading-rl

./: .gitignore  Makefile  README.md  pyproject.toml
configs/data/: binance_btcusdt_1h.yaml  binance_ethusdt_1h.yaml
configs/env/: spot_single_asset.yaml
configs/reports/: activity_crypto3_portfolio.yaml  activity_crypto3_portfolio_gates.yaml  core_exposure_crypto3_portfolio.yaml  core_exposure_crypto3_portfolio_gates.yaml  regime_crypto3_portfolio.yaml  regime_crypto3_portfolio_gates.yaml
configs/sweeps/: btc_eth_1h.yaml  calendar_holdout_crypto5.yaml  crypto5_1h.yaml  failure_diagnostics_crypto5.yaml  promotion_gates.yaml  promotion_gates_crypto5.yaml  trend_risk_grid_adaptive_crypto5.yaml  trend_risk_grid_btc_eth.yaml  trend_risk_grid_fast_btc_eth.yaml  trend_risk_grid_fast_crypto5.yaml  tune_test_activity_crypto3_2021_2024.yaml  tune_test_core_exposure_crypto3_2021_2024.yaml  tune_test_core_exposure_crypto5_2021_2024.yaml  tune_test_crypto5_2021_2024.yaml  tune_test_participation_crypto5_2021_2024.yaml  tune_test_regime_crypto3_2021_2024.yaml
configs/train/: ppo.yaml  ppo_overlay_btc_smoke.yaml  ppo_overlay_btc_v1.yaml  ppo_overlay_btc_v2.yaml  ppo_overlay_btc_v3.yaml
docs/: research_notes.md  results.md
src/trading_rl/: __init__.py
src/trading_rl/agents/: __init__.py  evaluate.py  rllib_train.py
src/trading_rl/data/: __init__.py  (+5 more)
tests/: test_accounting.py  test_calendar_holdout.py  test_env.py  test_failure_diagnostics.py  test_multi_symbol_sweep.py  test_portfolio_gates.py  test_portfolio_report.py  test_promotion_gates.py  test_reporting.py  test_rewards.py  test_risk_overlay_env.py  test_strategy_sweep.py  test_trailing_stop.py  test_trend_risk_grid.py  test_tune_test.py  test_walk_forward.py
(+21 files in other folders)
