[project]
name = "trading-rl"
version = "0.1.0"
description = "Production-minded reinforcement learning research platform for crypto trading."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "gymnasium>=1.2.0",
  "httpx>=0.28.0",
  "mlflow>=3.0.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "pyarrow>=16.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]
rllib = [
  "ray[rllib]>=2.40.0",
  "torch>=2.4.0",
]

[project.scripts]
trading-rl-download = "trading_rl.data.binance_client:main"
trading-rl-evaluate = "trading_rl.agents.evaluate:main"
trading-rl-train-rllib = "trading_rl.agents.rllib_train:main"
trading-rl-walk-forward = "trading_rl.backtest.walk_forward:main"
trading-rl-strategy-sweep = "trading_rl.backtest.strategy_sweep:main"
trading-rl-multi-symbol-sweep = "trading_rl.backtest.multi_symbol_sweep:main"
trading-rl-trend-risk-grid = "trading_rl.backtest.trend_risk_grid:main"
trading-rl-promotion-gates = "trading_rl.backtest.promotion_gates:main"
trading-rl-calendar-holdout = "trading_rl.backtest.calendar_holdout:main"
trading-rl-tune-test = "trading_rl.backtest.tune_test:main"
trading-rl-failure-diagnostics = "trading_rl.backtest.failure_diagnostics:main"
trading-rl-portfolio-report = "trading_rl.backtest.portfolio_report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
